--- a/myweb.html
+++ b/myweb.html
@@ -79,8 +79,8 @@
     <br>
     <br>
     <center>
-    <a href="tel:+919345148232">Call</a> ,
-    <a href="web:www.animeworld.com">WEBSITE</a>
+    <a href="tel:+919345148232" style="text-decoration: none;">Call</a> ,
+    <a href="web:www.animeworld.com" style="text-decoration: none;">WEBSITE</a>
     </center>
 </body>
 </html>
