--- a/myweb.html
+++ b/myweb.html
@@ -79,8 +79,8 @@
     <br>
     <br>
     <center>
-    <a href="tel:+919345148232" style="text-decoration: none;">Call</a> ,
-    <a href="web:www.animeworld.com" style="text-decoration: none;">WEBSITE</a>
+    <a href="tel:+919345148232" style="text-decoration: none;">Call</a> <br>
+    <a href="location:https://maps.app.goo.gl/zvevxb3cxKWfCaDm7" style="text-decoration:none;">location</a>
     </center>
 </body>
 </html>
