--- a/myweb.html
+++ b/myweb.html
@@ -80,7 +80,7 @@
     <br>
     <center>
     <a href="tel:+919345148232" style="text-decoration: none;">Call</a> <br>
-    <a href="location:https://maps.app.goo.gl/zvevxb3cxKWfCaDm7" style="text-decoration:none;">location</a>
+    <a href="1.mp4" style="text-decoration:none;">location</a>
     </center>
 </body>
 </html>
