add more style file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anime world login</title>
     <link rel="icon" href="3.jpg" type="image/jpg">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <style>
@@ -31,7 +32,8 @@
         <input type="password" id="password" name="password" required><br><br>
         <label for="phone">Mobile Number:</label><br>
         <input type="number" id="number" name="Mobile" required><br><br>
-        <input type="submit" value="Login">
+        <input id="log" type="submit" value="Login">
+        <input id="re" type="reset" value="Reset">
      </form>
      
     
