--- a/myweb.html
+++ b/myweb.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANIME WORLD CLOTHING</title>
     <link rel="icon" href="3.jpg" type="image/jpg">
+    <link rel="stylesheet" href="myweb.css">
 </head>
 <body>
     <style>
@@ -42,8 +43,8 @@
     <h4>price-$250</h4>
     <h4>meterial-puir cotten 240 GSM</h4>
     <h4>availoble - drop solder , hoodie , switshirt , polo .</h4>
-    <center>
-    <table border="1" cellpadding="10" cellspacing="0">
+   <center>
+    <table id="web" border="1" cellpadding="10" cellspacing="0">
         <tr>
             <th>S.NO</th>
             <th>METERIL</th>
@@ -75,12 +76,12 @@
             <td>$250</td>
         </tr>
     </table>
-    </center>
+   </center>
     <br>
     <br>
-    <center>
-    <a href="tel:+919345148232" style="text-decoration: none;">Call</a> <br>
+   <center>
+    <a href="tel:+919345148232" style="text-decoration: none;">Call</a> <br><br>
     <a href="1.mp4" style="text-decoration:none;">location</a>
-    </center>
+   </center>
 </body>
 </html>
